fix : 엔드포인트 /api 통일